add missing newlines in italian translation

--- a/po/it.po
+++ b/po/it.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: setzer\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-08-14 20:11+0200\n"
-"PO-Revision-Date: 2020-08-14 20:18+0200\n"
+"PO-Revision-Date: 2020-08-24 11:02+0200\n"
 "Last-Translator: Kowalski7cc <kowalski.7cc@gmail.com>\n"
 "Language-Team: \n"
 "Language: it\n"
@@ -1814,12 +1814,13 @@ msgid ""
 "a top level document (the master) will contain multiple lower\n"
 "level files via include statements."
 msgstr ""
-"Il documento principale verrà creato, indipendentemente dal documentoche "
-"stai modificando, e verrà sempre visualizzato nell'anteprima .pdf.Il "
-"registro di compilazione farà anche riferimento al documento principale.Ciò "
-"è spesso utile per lavorare su grandi progetti in cui un documentodi livello "
-"superiore (il master) conterrà più file di livelloinferiore tramite "
-"istruzioni include."
+"Il documento principale verrà creato, indipendentemente dal\n"
+"documentoche stai modificando, e verrà sempre visualizzato\n"
+"nell'anteprima .pdf.Il registro di compilazione farà anche\n"
+"riferimento al documento principale.Ciò è spesso utile per\n"
+"lavorare su grandi progetti in cui un documentodi livello\n"
+"superiore (il master) conterrà più file di livelloinferiore\n"
+"tramite istruzioni include."
 
 #: setzer/workspace/headerbar/headerbar_viewgtk.py:48
 msgid "Toggle sidebar"
